--- a/iweather/iweather/AppDelegate/Main.storyboard
+++ b/iweather/iweather/AppDelegate/Main.storyboard
@@ -20,9 +20,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7FM-E2-rQt">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backGround.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="POg-l0-7d7">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <color key="backgroundColor" red="0.12165751308202744" green="0.12914609909057617" blue="0.14252135157585144" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7FM-E2-rQt">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="zAc-Iq-m1Q"/>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="LkS-er-Zcq"/>
@@ -31,9 +34,13 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstAttribute="bottom" secondItem="POg-l0-7d7" secondAttribute="bottom" id="1Lm-eh-Lf0"/>
                             <constraint firstAttribute="trailing" secondItem="7FM-E2-rQt" secondAttribute="trailing" id="3Qp-zL-Neo"/>
-                            <constraint firstItem="7FM-E2-rQt" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="8MT-Rk-8BS"/>
+                            <constraint firstItem="7FM-E2-rQt" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" id="8MT-Rk-8BS"/>
+                            <constraint firstAttribute="trailing" secondItem="POg-l0-7d7" secondAttribute="trailing" id="AlS-se-p4R"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="7FM-E2-rQt" secondAttribute="bottom" id="bPS-aO-dp8"/>
+                            <constraint firstItem="POg-l0-7d7" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="cmy-JW-13o"/>
+                            <constraint firstItem="POg-l0-7d7" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="yoX-ZB-g5U"/>
                             <constraint firstItem="7FM-E2-rQt" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="zWx-d5-cye"/>
                         </constraints>
                     </view>
@@ -44,7 +51,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1068" y="218"/>
+            <point key="canvasLocation" x="1068" y="217.24137931034485"/>
         </scene>
         <!--Home DetailVC-->
         <scene sceneID="bEy-pV-Lfp">
@@ -58,9 +65,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="backgoundetail1.png" translatesAutoresizingMaskIntoConstraints="NO" id="3Vr-65-zWR">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qc7-mA-mAQ">
                                 <rect key="frame" x="0.0" y="629" width="375" height="1"/>
-                                <color key="backgroundColor" red="0.78937876220000003" green="0.58974033589999997" blue="0.54531586170000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="Smd-13-bDA"/>
                                 </constraints>
@@ -137,7 +148,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="a3b-tM-UbC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1068" y="-474.51274362818594"/>
+            <point key="canvasLocation" x="1068" y="-522.18890554722645"/>
         </scene>
         <!--SearchVC-->
         <scene sceneID="z7D-KF-ZoA">
@@ -231,7 +242,7 @@
                     </connections>
                 </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="1835" y="219"/>
+            <point key="canvasLocation" x="1818" y="217"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="qUN-Wd-fZd">
@@ -255,6 +266,8 @@
     </scenes>
     <resources>
         <image name="1234.png" width="54" height="53"/>
+        <image name="backGround.jpg" width="640" height="430"/>
+        <image name="backgoundetail1.png" width="222" height="177"/>
         <image name="menu.png" width="32" height="32"/>
     </resources>
 </document>
