--- a/iweather/iweather/MVC/CellDetail/MyCellInfomationLocation.xib
+++ b/iweather/iweather/MVC/CellDetail/MyCellInfomationLocation.xib
@@ -11,11 +11,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="166" id="KGk-i7-Jjw" customClass="MyCellInfomationLocation" customModule="iweather" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="165"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="217" id="KGk-i7-Jjw" customClass="MyCellInfomationLocation" customModule="iweather" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="216"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="165"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="215.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City :" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iQK-JL-Rkl">
@@ -96,18 +96,37 @@
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nR6-p9-uV0">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="1"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="dc3-K3-rcc"/>
+                        </constraints>
+                    </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4cg-j3-9hp">
+                        <rect key="frame" x="0.0" y="214" width="320" height="1"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="Gu1-df-L8E"/>
+                        </constraints>
+                    </view>
                 </subviews>
-                <color key="backgroundColor" red="0.53889065979999995" green="0.37561985850000001" blue="0.44788157940000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="dw1-67-URd" secondAttribute="trailing" id="14v-CG-jjm"/>
                     <constraint firstAttribute="trailing" secondItem="hTL-bt-kjO" secondAttribute="trailing" id="1KY-fb-uSn"/>
                     <constraint firstAttribute="trailing" secondItem="FpW-Dm-9JJ" secondAttribute="trailing" id="3s8-Qk-RAN"/>
+                    <constraint firstItem="4cg-j3-9hp" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="4VH-bj-CCY"/>
                     <constraint firstItem="iQK-JL-Rkl" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="1/2" id="8iq-Ow-HSq"/>
                     <constraint firstItem="3Eo-wz-xEA" firstAttribute="height" secondItem="nMi-hg-6pT" secondAttribute="height" id="9R4-3B-Zbm"/>
                     <constraint firstItem="hTq-f1-X5Y" firstAttribute="height" secondItem="h9a-ry-EXX" secondAttribute="height" id="C79-mi-KXm"/>
+                    <constraint firstAttribute="trailing" secondItem="nR6-p9-uV0" secondAttribute="trailing" id="Df1-XE-Ltb"/>
                     <constraint firstAttribute="trailing" secondItem="7Dh-Th-gvI" secondAttribute="trailing" id="Gsi-KM-C4J"/>
                     <constraint firstItem="hTq-f1-X5Y" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="J4v-it-A5t"/>
+                    <constraint firstAttribute="trailing" secondItem="4cg-j3-9hp" secondAttribute="trailing" id="LGC-xl-DHj"/>
+                    <constraint firstItem="nR6-p9-uV0" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="MhC-42-lPN"/>
                     <constraint firstItem="hTL-bt-kjO" firstAttribute="top" secondItem="dw1-67-URd" secondAttribute="bottom" constant="5" id="Mph-It-cVK"/>
+                    <constraint firstItem="nR6-p9-uV0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="MrS-57-YMv"/>
                     <constraint firstItem="dw1-67-URd" firstAttribute="leading" secondItem="nMi-hg-6pT" secondAttribute="trailing" constant="5" id="Naf-vk-vqB"/>
                     <constraint firstItem="iQK-JL-Rkl" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="Ogr-Kp-9k4"/>
                     <constraint firstItem="iQK-JL-Rkl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Ow1-Ov-28j"/>
@@ -123,6 +142,7 @@
                     <constraint firstItem="FpW-Dm-9JJ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="fgD-SA-Pso"/>
                     <constraint firstItem="h9a-ry-EXX" firstAttribute="top" secondItem="3Eo-wz-xEA" secondAttribute="bottom" constant="5" id="gKI-ZS-lrO"/>
                     <constraint firstItem="h9a-ry-EXX" firstAttribute="height" secondItem="3Eo-wz-xEA" secondAttribute="height" id="gfF-NI-f2M"/>
+                    <constraint firstAttribute="bottom" secondItem="4cg-j3-9hp" secondAttribute="bottom" id="gqq-va-b5K"/>
                     <constraint firstItem="h9a-ry-EXX" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="lYN-cd-ayK"/>
                     <constraint firstItem="hTL-bt-kjO" firstAttribute="leading" secondItem="3Eo-wz-xEA" secondAttribute="trailing" constant="5" id="laN-gw-hd7"/>
                     <constraint firstItem="AhU-o0-uQz" firstAttribute="leading" secondItem="hTq-f1-X5Y" secondAttribute="trailing" constant="5" id="mMd-lJ-7oT"/>
@@ -135,6 +155,7 @@
                     <constraint firstItem="7Dh-Th-gvI" firstAttribute="top" secondItem="hTL-bt-kjO" secondAttribute="bottom" constant="5" id="xkc-zX-gAr"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <connections>
                 <outlet property="lblCity" destination="FpW-Dm-9JJ" id="CZ1-WW-vyy"/>
                 <outlet property="lblCountry" destination="dw1-67-URd" id="asY-Qf-2uX"/>
@@ -142,7 +163,7 @@
                 <outlet property="lblLong" destination="AhU-o0-uQz" id="yzk-SF-g0f"/>
                 <outlet property="lblRegion" destination="hTL-bt-kjO" id="Fl8-rX-YMT"/>
             </connections>
-            <point key="canvasLocation" x="25" y="113"/>
+            <point key="canvasLocation" x="65" y="-97"/>
         </tableViewCell>
     </objects>
 </document>
