--- a/iweather/iweather/MVC/CellDetail/MyCollectionViewCell.xib
+++ b/iweather/iweather/MVC/CellDetail/MyCollectionViewCell.xib
@@ -12,13 +12,13 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="MyCollectionViewCell" customModule="iweather" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="594"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="594"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bc_background" translatesAutoresizingMaskIntoConstraints="NO" id="pOb-dT-whN">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pOb-dT-whN">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="234"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </imageView>
@@ -109,8 +109,11 @@
                             <constraint firstItem="jCS-NJ-Gfh" firstAttribute="leading" secondItem="48s-An-fT7" secondAttribute="leading" constant="20" id="yAB-Ry-Pal"/>
                         </constraints>
                     </view>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backgoundetail1.png" translatesAutoresizingMaskIntoConstraints="NO" id="OrA-XA-Kh2">
+                        <rect key="frame" x="0.0" y="220" width="320" height="374"/>
+                    </imageView>
                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="01i-pM-KYa">
-                        <rect key="frame" x="0.0" y="220" width="320" height="348"/>
+                        <rect key="frame" x="0.0" y="220" width="320" height="374"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tableView>
@@ -119,19 +122,25 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="01i-pM-KYa" secondAttribute="bottom" id="3GV-h9-dF8"/>
+                <constraint firstAttribute="trailing" secondItem="OrA-XA-Kh2" secondAttribute="trailing" id="40s-yQ-O2k"/>
                 <constraint firstAttribute="trailing" secondItem="pOb-dT-whN" secondAttribute="trailing" id="59O-4A-bMc"/>
+                <constraint firstItem="OrA-XA-Kh2" firstAttribute="width" secondItem="01i-pM-KYa" secondAttribute="width" id="7Fj-b3-Q6S"/>
                 <constraint firstItem="01i-pM-KYa" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="EE2-b7-kAU"/>
                 <constraint firstAttribute="trailing" secondItem="01i-pM-KYa" secondAttribute="trailing" id="HD5-hO-9zW"/>
                 <constraint firstAttribute="trailing" secondItem="48s-An-fT7" secondAttribute="trailing" id="HXb-C5-Jvy"/>
                 <constraint firstItem="48s-An-fT7" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="20" id="HoW-5t-XMp"/>
+                <constraint firstItem="OrA-XA-Kh2" firstAttribute="height" secondItem="01i-pM-KYa" secondAttribute="height" id="ONC-Is-JPW"/>
                 <constraint firstItem="01i-pM-KYa" firstAttribute="top" secondItem="48s-An-fT7" secondAttribute="bottom" id="QLv-Km-Y8P"/>
                 <constraint firstItem="48s-An-fT7" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="d7V-yw-Y0j"/>
                 <constraint firstItem="48s-An-fT7" firstAttribute="top" secondItem="pOb-dT-whN" secondAttribute="bottom" constant="-214" id="gM6-Oi-CbI"/>
+                <constraint firstAttribute="bottom" secondItem="OrA-XA-Kh2" secondAttribute="bottom" id="hPr-qv-nd1"/>
+                <constraint firstItem="OrA-XA-Kh2" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="jFJ-hG-6mu"/>
                 <constraint firstItem="pOb-dT-whN" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="rrh-FK-3qx"/>
                 <constraint firstItem="pOb-dT-whN" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="tAb-Fg-IQN"/>
             </constraints>
-            <size key="customSize" width="310" height="208"/>
+            <size key="customSize" width="310" height="234"/>
             <connections>
+                <outlet property="imgBackgroundTableVIew" destination="OrA-XA-Kh2" id="JYl-8C-MkS"/>
                 <outlet property="lblCity" destination="DNW-1z-iVE" id="aYu-EK-cWR"/>
                 <outlet property="lblDayInWeek" destination="jCS-NJ-Gfh" id="PUx-eR-6D5"/>
                 <outlet property="lblHigh" destination="YVL-S5-7zm" id="jAK-qS-EfL"/>
@@ -142,10 +151,10 @@
                 <outlet property="myTableView" destination="01i-pM-KYa" id="Qob-KR-IfE"/>
                 <outlet property="myViewDetail" destination="48s-An-fT7" id="LT9-Ey-ZCu"/>
             </connections>
-            <point key="canvasLocation" x="-67" y="-156"/>
+            <point key="canvasLocation" x="-67" y="-143"/>
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="bc_background" width="320" height="307"/>
+        <image name="backgoundetail1.png" width="222" height="177"/>
     </resources>
 </document>
