--- a/iweather/iweather/MVC/CellDetail/myCellTempHour.xib
+++ b/iweather/iweather/MVC/CellDetail/myCellTempHour.xib
@@ -11,14 +11,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="myCellTempHour" customModule="iweather" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="71" height="138"/>
+            <rect key="frame" x="0.0" y="0.0" width="84" height="152"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="71" height="138"/>
+                <rect key="frame" x="0.0" y="0.0" width="84" height="152"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="86m-8u-CaV">
-                        <rect key="frame" x="0.0" y="5" width="71" height="21"/>
+                        <rect key="frame" x="0.0" y="5" width="84" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="vqn-gF-MoV"/>
                         </constraints>
@@ -27,14 +27,14 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fru-oL-TS2">
-                        <rect key="frame" x="23" y="56.5" width="25" height="25"/>
+                        <rect key="frame" x="29.5" y="63.5" width="25" height="25"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="25" id="F05-FP-P6f"/>
                             <constraint firstAttribute="height" constant="25" id="xAm-4T-ddn"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BNe-tZ-edQ">
-                        <rect key="frame" x="0.0" y="112" width="71" height="21"/>
+                        <rect key="frame" x="0.0" y="126" width="84" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="Si9-os-5zT"/>
                         </constraints>
@@ -44,7 +44,7 @@
                     </label>
                 </subviews>
             </view>
-            <color key="backgroundColor" red="0.53501206639999999" green="0.375600934" blue="0.4479415417" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="BNe-tZ-edQ" firstAttribute="width" secondItem="gTV-IL-0wX" secondAttribute="width" id="48l-ey-aCB"/>
                 <constraint firstItem="86m-8u-CaV" firstAttribute="width" secondItem="gTV-IL-0wX" secondAttribute="width" id="5zf-UT-zOY"/>
@@ -55,13 +55,13 @@
                 <constraint firstItem="86m-8u-CaV" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="qXh-a9-UOg"/>
                 <constraint firstItem="BNe-tZ-edQ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="uAg-5B-dFM"/>
             </constraints>
-            <size key="customSize" width="71" height="138"/>
+            <size key="customSize" width="84" height="152"/>
             <connections>
                 <outlet property="img" destination="fru-oL-TS2" id="eWy-PE-GB1"/>
                 <outlet property="lblTemp" destination="BNe-tZ-edQ" id="zYT-D7-5kx"/>
                 <outlet property="lblTimer" destination="86m-8u-CaV" id="i0T-vg-btA"/>
             </connections>
-            <point key="canvasLocation" x="-169.5" y="85"/>
+            <point key="canvasLocation" x="-163" y="78"/>
         </collectionViewCell>
     </objects>
 </document>
