--- a/iweather/iweather/MVC/CellHome/MyCellWeather.xib
+++ b/iweather/iweather/MVC/CellHome/MyCellWeather.xib
@@ -10,49 +10,50 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MyCellWeather" rowHeight="100" id="KGk-i7-Jjw" customClass="MyCellWeather" customModule="iweather" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="421" height="100"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MyCellWeather" rowHeight="105" id="KGk-i7-Jjw" customClass="MyCellWeather" customModule="iweather" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="421" height="105"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="421" height="99.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="421" height="105"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="USd-2S-RF2">
-                        <rect key="frame" x="0.0" y="0.0" width="421" height="99.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="421" height="104.5"/>
+                        <color key="backgroundColor" white="1" alpha="0.5" colorSpace="calibratedWhite"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="12c-a1-BDI">
-                        <rect key="frame" x="5" y="53" width="52.5" height="33.5"/>
-                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="28"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <rect key="frame" x="5" y="58" width="51" height="33.5"/>
+                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="28"/>
+                        <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kfw-vj-8Dm">
                         <rect key="frame" x="69" y="5" width="33" height="20.5"/>
                         <color key="backgroundColor" red="0.88873751300000003" green="0.074391752429999999" blue="0.094870127959999995" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="o" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Qv-yc-I2o">
                         <rect key="frame" x="407" y="15" width="9" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="country" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aMU-XC-JVB">
                         <rect key="frame" x="5" y="5" width="59" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v7E-g0-A0I">
-                        <rect key="frame" x="347" y="0.0" width="60" height="91.5"/>
+                        <rect key="frame" x="347" y="0.0" width="60" height="96.5"/>
                         <color key="backgroundColor" red="0.88873751300000003" green="0.074391752429999999" blue="0.094870127959999995" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="60" id="eQt-YN-X2x"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" weight="thin" pointSize="50"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="a0d-OS-OFM">
@@ -71,14 +72,14 @@
                         </constraints>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FaH-fI-0Rd">
-                        <rect key="frame" x="0.0" y="91.5" width="421" height="8"/>
-                        <color key="backgroundColor" red="0.015686274510000001" green="0.10980392160000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <rect key="frame" x="0.0" y="96.5" width="421" height="8"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.20159995719178081" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="8" id="uAR-j0-isS"/>
                         </constraints>
                     </view>
                 </subviews>
-                <color key="backgroundColor" red="0.12076002700000001" green="1" blue="0.11501029309999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 <constraints>
                     <constraint firstItem="aMU-XC-JVB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="4Ve-fE-Lhj"/>
                     <constraint firstItem="aMU-XC-JVB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="5Y6-bQ-UmK"/>
@@ -104,6 +105,7 @@
                     <constraint firstItem="FaH-fI-0Rd" firstAttribute="top" secondItem="12c-a1-BDI" secondAttribute="bottom" constant="5" id="xqK-xz-uFb"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <connections>
                 <outlet property="imgBackgroudCell" destination="USd-2S-RF2" id="QvK-Yb-v2o"/>
                 <outlet property="imgCell" destination="a0d-OS-OFM" id="jmh-ff-0Jw"/>
@@ -113,7 +115,7 @@
                 <outlet property="lblTemperature" destination="v7E-g0-A0I" id="kla-hT-PJz"/>
                 <outlet property="lblTime" destination="kfw-vj-8Dm" id="2oj-Zx-L88"/>
             </connections>
-            <point key="canvasLocation" x="-93.5" y="-200"/>
+            <point key="canvasLocation" x="-93.5" y="-197.5"/>
         </tableViewCell>
     </objects>
 </document>
