--- a/iweather/iweather/MVC/CellHome/CellLast.xib
+++ b/iweather/iweather/MVC/CellHome/CellLast.xib
@@ -80,21 +80,42 @@
                             <constraint firstAttribute="width" constant="25" id="gyG-Zu-906"/>
                         </constraints>
                     </imageView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Edn-SB-8tR">
+                        <rect key="frame" x="192" y="5" width="100" height="50"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="100" id="9sQ-E3-MXj"/>
+                            <constraint firstAttribute="height" constant="50" id="jYM-Aa-ArE"/>
+                        </constraints>
+                        <connections>
+                            <action selector="viewToMap:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="sMZ-sk-luo"/>
+                        </connections>
+                    </button>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="if_map.png" translatesAutoresizingMaskIntoConstraints="NO" id="vvF-XB-H5H">
+                        <rect key="frame" x="227" y="15" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="30" id="JR7-Uv-0pY"/>
+                            <constraint firstAttribute="height" constant="30" id="d3A-Uo-Lb2"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <color key="backgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
                 <constraints>
                     <constraint firstItem="EAb-Sa-opI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="3" id="4Yj-Lk-E1g"/>
                     <constraint firstItem="B7p-ml-gYE" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="4zX-Vk-1QL"/>
+                    <constraint firstItem="vvF-XB-H5H" firstAttribute="centerX" secondItem="Edn-SB-8tR" secondAttribute="centerX" id="JCx-l2-EB1"/>
                     <constraint firstItem="aPr-np-8u6" firstAttribute="leading" secondItem="86f-Wk-7jL" secondAttribute="trailing" constant="-7" id="Jzs-8e-K74"/>
                     <constraint firstItem="B7p-ml-gYE" firstAttribute="top" secondItem="IF5-ui-fOr" secondAttribute="top" id="LbE-ME-Ifk"/>
                     <constraint firstItem="aPr-np-8u6" firstAttribute="leading" secondItem="Jwh-zv-9ah" secondAttribute="trailing" id="N5g-vD-JEm"/>
                     <constraint firstItem="Jwh-zv-9ah" firstAttribute="leading" secondItem="B7p-ml-gYE" secondAttribute="trailing" id="RA1-1w-feq"/>
                     <constraint firstItem="aPr-np-8u6" firstAttribute="height" secondItem="B7p-ml-gYE" secondAttribute="height" id="ZDs-5t-geS"/>
                     <constraint firstItem="cBf-m9-D59" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="ZPv-Zp-zz6"/>
+                    <constraint firstItem="Edn-SB-8tR" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="aFe-82-BzC"/>
                     <constraint firstItem="B7p-ml-gYE" firstAttribute="leading" secondItem="IF5-ui-fOr" secondAttribute="trailing" constant="-2" id="bhq-kK-Uvf"/>
                     <constraint firstItem="Jwh-zv-9ah" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="cCR-N6-XRU"/>
                     <constraint firstAttribute="trailing" secondItem="EAb-Sa-opI" secondAttribute="trailing" constant="10" id="dvJ-VN-5Zv"/>
                     <constraint firstItem="GJD-cg-guE" firstAttribute="centerY" secondItem="EAb-Sa-opI" secondAttribute="centerY" id="e7p-2l-aXO"/>
+                    <constraint firstItem="Edn-SB-8tR" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="iel-QL-5OW"/>
+                    <constraint firstItem="vvF-XB-H5H" firstAttribute="centerY" secondItem="Edn-SB-8tR" secondAttribute="centerY" id="kHe-PJ-n21"/>
                     <constraint firstItem="aPr-np-8u6" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="lny-gs-cIX"/>
                     <constraint firstItem="Jwh-zv-9ah" firstAttribute="height" secondItem="B7p-ml-gYE" secondAttribute="height" id="m54-Z2-CCO"/>
                     <constraint firstItem="B7p-ml-gYE" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="40" id="pvl-2v-vlu"/>
@@ -107,16 +128,19 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <connections>
                 <outlet property="btnAddLocation" destination="EAb-Sa-opI" id="Vkr-6n-lXD"/>
+                <outlet property="btnViewToMap" destination="Edn-SB-8tR" id="B7s-Yg-6Nk"/>
                 <outlet property="imgAddLocation" destination="GJD-cg-guE" id="62Y-fO-Mho"/>
+                <outlet property="imgViewToMap" destination="vvF-XB-H5H" id="BtK-4Y-PN8"/>
                 <outlet property="lblC" destination="B7p-ml-gYE" id="Yp9-1b-bUi"/>
                 <outlet property="lblF" destination="aPr-np-8u6" id="3lN-ru-Fih"/>
                 <outlet property="lblOC" destination="IF5-ui-fOr" id="1Jt-mn-heg"/>
                 <outlet property="lblOF" destination="86f-Wk-7jL" id="4FJ-VH-qpP"/>
             </connections>
-            <point key="canvasLocation" x="4" y="-38.5"/>
+            <point key="canvasLocation" x="-211" y="-131"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="add" width="512" height="512"/>
+        <image name="if_map.png" width="20" height="20"/>
     </resources>
 </document>
