--- a/iweather/iweather/AppDelegate/Main.storyboard
+++ b/iweather/iweather/AppDelegate/Main.storyboard
@@ -54,6 +54,36 @@
             </objects>
             <point key="canvasLocation" x="1068" y="217.24137931034485"/>
         </scene>
+        <!--MapVC-->
+        <scene sceneID="VXM-Wi-U1i">
+            <objects>
+                <viewController storyboardIdentifier="MapVC" id="FMv-v7-Gbf" customClass="MapVC" customModule="iweather" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="aSV-oD-DpJ"/>
+                        <viewControllerLayoutGuide type="bottom" id="L75-9D-4Yt"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Pep-cK-Gp0">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7vH-QN-6Ht" customClass="GMSMapView">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="7vH-QN-6Ht" firstAttribute="leading" secondItem="Pep-cK-Gp0" secondAttribute="leading" id="Gt3-v7-NKd"/>
+                            <constraint firstItem="L75-9D-4Yt" firstAttribute="top" secondItem="7vH-QN-6Ht" secondAttribute="bottom" id="XfN-qm-3gv"/>
+                            <constraint firstItem="7vH-QN-6Ht" firstAttribute="top" secondItem="aSV-oD-DpJ" secondAttribute="bottom" id="f3t-jl-neG"/>
+                            <constraint firstAttribute="trailing" secondItem="7vH-QN-6Ht" secondAttribute="trailing" id="m68-kj-RyT"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sUr-6B-1WR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1068" y="902"/>
+        </scene>
         <!--Home DetailVC-->
         <scene sceneID="bEy-pV-Lfp">
             <objects>
@@ -252,7 +282,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="qZo-H7-cgj" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="WqR-EF-j6N">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="WqR-EF-j6N">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
